Aenderungen waehrend der Aufnahme

--- a/loesung.html
+++ b/loesung.html
@@ -28,7 +28,7 @@
           <li><a href="#alpacas">Alpacas</a></li>
         </ul>
       </nav>
-      <div id="donate">
+      <form id="donate">
         <h3>Ihre Spende hilft!</h3>
         <div class="donationrow">
           <input type="radio" name="fixeddonation" value="50" id="l50"><label for="l50">50</label>
@@ -50,7 +50,7 @@
           <li class="medium">Kleintiere</li>
           <li class="low">Andere</li>
         </ul>
-      </div>
+      </form>
     </div>
     <main>
       <article id="cats"><h2>Katzen</h2>
@@ -142,7 +142,7 @@
     </nav> 
     </section>
     <footer>
-    <p>&copy; 2021 Amazing Company. Made with ❤️</p>
+    <p>&copy; 2021 Tolle Firma. Mit ❤️ gemacht</p>
   </footer>
 </section>
 <script src="buttons.js"></script>
